RESOLVED FIXED229772
Fix IndexedDoubleStore InlineAccess for 32 bits
https://bugs.webkit.org/show_bug.cgi?id=229772
Summary Fix IndexedDoubleStore InlineAccess for 32 bits
Mikhail R. Gadelha
Reported 2021-09-01 14:34:35 PDT
Fix IndexedDoubleStore InlineAccess for 32 bits
Attachments
Patch (1.98 KB, patch)
2021-09-01 14:45 PDT, Mikhail R. Gadelha
no flags
Mikhail R. Gadelha
Comment 1 2021-09-01 14:45:07 PDT
Caio Lima
Comment 2 2021-09-02 09:59:38 PDT
Comment on attachment 437070 [details] Patch r=me
EWS
Comment 3 2021-09-02 10:20:48 PDT
Committed r281933 (241242@main): <https://commits.webkit.org/241242@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 437070 [details].
Radar WebKit Bug Importer
Comment 4 2021-09-02 10:21:20 PDT
Note You need to log in before you can comment on or make changes to this bug.