Fix IndexedDoubleStore InlineAccess for 32 bits https://bugs.webkit.org/show_bug.cgi?id=229772

Patch by Mikhail R. Gadelha <mikhail@igalia.com> on 2021-09-02
Reviewed by Caio Araujo Neponoceno de Lima.

In IndexedDoubleStore inline access, the path if the value is NaN
is only being handled in 64 bits, thus introducing some wrong
results in 32 bits. This patch fixes:

stress/double-add-sub-mul-can-produce-nan.js
stress/pow-stable-results.js
stress/math-pow-stable-results.js

* bytecode/AccessCase.cpp:
(JSC::AccessCase::generateWithGuard):

Canonical link: https://commits.webkit.org/241242@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@281933 268f45cc-cd09-0410-ab3c-d52691b4dbfc